# mcp-csv-translator

./: .gitignore  Cargo.toml  README.md  config.toml
docs/: knowledge.md
src/: lib.rs  main.rs
src/csv_processor/: analyzer.rs  chunker.rs  mod.rs  reader.rs  resequencer.rs  writer.rs
src/server/: mod.rs  tools.rs
src/state/: checkpoint.rs  cleanup.rs  metadata.rs  mod.rs
src/translation/: cache.rs  client.rs  context.rs  long_cell.rs  mod.rs
src/utils/: config.rs  errors.rs  mod.rs
tests/: sample.csv
