[package]
name = "csv-translator-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server for translating large CSV files efficiently"
authors = ["Your Name"]
license = "MIT"

[dependencies]
# MCP Framework (official Rust SDK)
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", features = [
    "server",
    "transport-io", 
    "macros"
] }

# Async Runtime
tokio = { version = "1.35", features = ["full", "tracing"] }
async-trait = "0.1"

# CSV Processing
csv = "1.3"
tokio-util = { version = "0.7", features = ["codec", "io"] }
bytes = "1.5"

# HTTP Client & API
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# State Management
redb = "2.1"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Token Counting
tiktoken-rs = "0.5"

# Schema (use same version as rmcp)
schemars = { version = "1.2", features = ["derive"] }

# UUID for session IDs
uuid = { version = "1.6", features = ["v4"] }

# Config
toml = "0.8"

# Futures
futures = "0.3"

# HTTP server
axum = "0.7"
tower = "0.4"

[dev-dependencies]
tempfile = "3.10"

[[bin]]
name = "csv-translator-mcp"
path = "src/main.rs"
